--- a/Blazor.net/Components/TableTemplate.cshtml
+++ b/Blazor.net/Components/TableTemplate.cshtml
@@ -19,5 +19,5 @@
     [Parameter] RenderFragment TableHeader { get; set; }
     [Parameter] RenderFragment<TItem> RowTemplate { get; set; }
     [Parameter] RenderFragment TableFooter { get; set; }
-    [Parameter] IReadOnlyList<TItem> Items { get; set; }
+    [Parameter] IList<TItem> Items { get; set; }
 }
