--- a/Blazor.net/Views/clock.cshtml
+++ b/Blazor.net/Views/clock.cshtml
@@ -1,6 +1,8 @@
 ﻿@page "/clock"
 @layout MasterLayout
 @using System.Threading
+@using Blazor.net.Services
+@inject IBinaryFormatterService BinaryFormatter
 
 <p>
     @currentTime
@@ -32,24 +34,12 @@
             var now = DateTime.Now;
             currentTime = now.ToLongTimeString();
 
-            binaryHours = IntToBinaryString(now.Hour);
-            binaryMinutes = IntToBinaryString(now.Minute);
-            binarySeconds = IntToBinaryString(now.Second);
+            binaryHours = BinaryFormatter.ToBinary(now.Hour);
+            binaryMinutes = BinaryFormatter.ToBinary(now.Minute);
+            binarySeconds = BinaryFormatter.ToBinary(now.Second);
 
             this.StateHasChanged();
         }, null, 1000, 1000);
     }
 
-    public string IntToBinaryString(int number)
-    {
-        const int mask = 1;
-        var binary = string.Empty;
-        while(number > 0)
-        {
-            binary = (number & mask) + binary;
-            number = number >> 1;
-        }
-
-        return binary;
-    }
 }
